test_suite/alan-2022-examples/failing/004180_mutation.alan
source mLI3a begin leave - end 4 end
